Sprint 2 Implementierung BAT-26, BAT-27 : Umsetzung des Zustandsdiagramm der Warnung / Anpassung der Warnung, Anpassen der Farbpalette (BAT-17)